--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		
 
 
-		<canvas id="canvas" width="1280" height="660" style="position: absolute;"></canvas>
+		<canvas id="canvas" width="1280" height="660" style="position: absolute; margin-left: auto; margin-right: auto;"></canvas>
 		
 
 
