--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 	<title>3D Xs and Os</title>
 </head>
 <body>	
-	<div id="mainDiv" style="width: 1280px; height: 660px; background-color: orange; position: absolute; margin-left: auto; margin-right: auto;">
+	<div id="mainDiv" style="width: 1280px; height: 660px; background-color: orange; position: absolute;">
 		
 
 
-		<canvas id="canvas" width="1280" height="660" style="position: absolute; margin-left: auto; margin-right: auto;"></canvas>
+		<canvas id="canvas" width="1280" height="660" style="position: absolute;"></canvas>
 		
 
 
