--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>3D Xs and Os</title>
 </head>
-<body>	
+<body style="align: center;">	
 	<div id="mainDiv" style="width: 1280px; height: 660px; background-color: orange; position: absolute;">
 		
 
