--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>3D Xs and Os</title>
 </head>
 <body align="center">	
-	<div id="mainDiv" style="width: 1280px; height: 660px; background-color: orange; position: absolute;">
+	<div id="mainDiv" style="width: 1280px; height: 660px; background-color: orange; position: absolute;" align="center">
 		
 
 
