--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<title>3D Xs and Os</title>
 </head>
-<body align="center">	
-	<div id="mainDiv" style="width: 1280px; height: 660px; background-color: orange; position: absolute;" align="center">
+<body>	
+	<div id="mainDiv" style="width: 1280px; height: 660px; background-color: orange; position: absolute;">
 		
 
 
